# zondarr

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  biome.json  package.json  renovate.json
backend/: README.md  alembic.ini  pyproject.toml  zondarr.db
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: .gitkeep  20260201_0001_001_initial_foundation.py  20260203_0001_002_wizard_system.py  20260206_0001_003_add_user_invitation_id_and_indexes.py  20260208_2244_18295ce7ef76_admin_auth.py  20260212_2121_47df78392c60_widen_auth_method_column.py  20260214_0001_006_step_interactions.py  20260214_1627_0001_initial.py  20260222_1200_0002_add_unique_constraint_external_user_server.py  20260226_2102_4dc4ed3ab54b_add_sync_exclusions_table.py  20260228_1200_add_invitation_use_count_check.py  20260228_1538_51d23bb57699_initial.py  20260228_1742_6103f5e16ff6_add_totp_fields_to_admin_accounts.py  20260228_1800_a1b2c3d4e5f6_add_totp_rate_limit_columns.py  20260301_0121_879656e4f2f5_initial.py
backend/src/soyuznikarr/: __init__.py
backend/src/zondarr/: __init__.py  app.py  config.py
backend/src/zondarr/api/: __init__.py  auth.py  converters.py  errors.py  invitations.py  join.py  logs.py  oauth.py  plex_oauth.py  providers.py  schemas.py  servers.py  settings.py  totp.py  users.py  wizards.py
backend/src/zondarr/core/: __init__.py  auth.py  csrf.py  database.py  exceptions.py  log_buffer.py  tasks.py  types.py  wizard_token.py
backend/src/zondarr/media/: __init__.py  exceptions.py  protocol.py  provider.py  registry.py  types.py
backend/src/zondarr/models/: __init__.py  admin.py  base.py  identity.py  invitation.py  media_server.py  sync_exclusion.py  sync_run.py  wizard.py
backend/src/zondarr/repositories/: __init__.py  admin.py  base.py  identity.py  invitation.py  media_server.py  user.py  (+4 more)
backend/tests/: __init__.py  conftest.py  test_credential_locks.py  test_csrf_middleware.py  test_dashboard_controller.py  test_env_credentials.py  test_invitation_validation_endpoint.py  test_onboarding_service.py  test_placeholder.py  test_refresh_token_replay.py  test_settings_controller.py  test_settings_service.py  test_totp.py
backend/tests/property/: __init__.py  test_config_props.py  test_dedup_props.py  test_error_props.py  test_expiration_props.py  test_health_props.py  test_invitation_controller_props.py  test_invitation_flow_props.py  test_jellyfin_client_props.py  test_migration_props.py  test_models_props.py  test_plex_client_props.py  test_plex_oauth_controller_props.py  test_plex_oauth_props.py  test_redemption_props.py  test_registry_props.py  test_repo_props.py  test_service_props.py  test_sync_props.py  test_user_controller_props.py  test_user_service_props.py  test_wizard_props.py
(+259 files in other folders)
