[project]
name = "soyuznikarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "engels74", email = "141435164+engels74@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
soyuznikarr = "soyuznikarr:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
