[project]
name = "zondarr"
version = "0.1.0"
description = "Unified invitation and user management for media servers"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "engels74", email = "141435164+engels74@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "litestar>=2.15",
    "msgspec>=0.19",
    "granian>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "structlog>=25.0",
    "httpx>=0.28",
    "plexapi>=4.18",
    "jellyfin-sdk>=0.3",
    "argon2-cffi>=23.1",
    "pyjwt>=2.11.0",
    "pyotp>=2.9",
    "segno>=1.6",
    "cryptography>=46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.26",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.130",
    "ruff>=0.14",
    "basedpyright>=1.29",
    "granian[reload]>=2.6",
]

[project.scripts]
zondarr = "zondarr.cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "S", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"src/zondarr/app.py" = ["E402"]  # warnings filter must run before litestar imports
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.14"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
exclude = ["migrations", ".venv"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "-q", "--strict-markers", "--import-mode=importlib", "-n", "auto"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Filter Pydantic v1 compatibility warning on Python 3.14+
# This warning comes from Litestar's auto-discovery of the Pydantic plugin.
# Pydantic is a transitive dependency of jellyfin-sdk, not used by Zondarr directly.
# Zondarr uses msgspec exclusively for serialization.
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14:UserWarning",
]
